[options]
scripts = 
	
dependency_links = 
	
packages = find:
install_requires = 
  appyratus

[metadata]
name = store
description = 
    Looksee walks python modules in the file system, scans them, and executes a
    custom callback for each object that matches a logical predicate. This is a
    less annoying alternative to Venusian scanner.
long_description = file: README.md
long_description_content_type = text/markdown
version = 3.0.0
author = Daniel Gabriele
author_email = 
url = https://github.com/dgabriele/store
keywords = 
	
classifiers = 
	Programming Language :: Python :: 3.9
	License :: OSI Approved :: MIT License
