[options]
scripts = 
	
dependency_links = 
	
packages = 
	find:
install_requires = 
	appyratus

[metadata]
name = looksee
description = Looksee walks python modules in the file system, scans them, and executes a custom callback for each object that matches a logical predicate.  This is a less annoying alternative to Venusian scanner.
long_description = file: README.md
long_description_content_type = text/markdown
version = 3.0.2
author = Gigaquads
author_email = notdsk@gmail.com
url = https://github.com/gigaquads/looksee.git
keywords = 
	
classifiers = 
	Programming Language :: Python :: 3.9
	License :: OSI Approved :: MIT License

